syntax = "proto3";

package chat;

service chatBot {
    rpc engage(EngageRequest) returns (EngageResponse); //engaging with chatbox
    rpc faq(FAQRequest) returns (FAQResponse) //engaging with FAQ options;
    rpc chat(ChatRequest) returns (ChatResponse); //connecting with staff member
    rpc message(stream ChatMessage) returns (stream MessageResponse); //messaging staff member
}

message EngageRequest {
    string cust_id = 1;
}

message EngageResponse {
    string welcome_msg = 1;
    uint32 faq_option_1 = 2;
    uint32 faq_option_2 = 3;
}

message FAQRequest {
    uint32 cust_selection = 1;
}

message FAQResponse {
    string selection_response = 1;
    uint32 faq_option_1;
    uint32 faq_option_2;
}

message ChatRequest {
    string cust_id = 1;
    string message = 2;
    string message_time = 3;
}

message ChatResponse {
    bool success = 1;
    string staff_id = 2;
    string message_id = 3;
}

stream ChatMessage {
    string cust_id = 1;
    string message = 2;
    string message_time =3;
}

stream MessageResponse {
    string staff_id = 1;
    string message = 2;
    string message_time = 3;
}